  in your code, you can replace it with public GetWindowBorderSize().

- Microsoft Visual Studio 2003 (a.k.a. MSVC 7) is not supported any longer, the
  minimum required version is now 2005.


3.2.5: (released 2024-??-??)
----------------------------

All:

- Add support for "%F" format specifier to wxDateTime (#24173).
- Restore possible ABI incompatibility with wx < 3.2.3 in wxString.

All (GUI):

- Fix division-by-zero in wxRichTextCtrl (#23763).
- Make wxGraphicsContext offsetting consistent across scales (#23485).
- Improve error checking when saving TIFF images (Brian Delalex, #23214).
- Fix crash in wxLogGui when wxUSE_LOG_DIALOG==0 (Randalphwa, #24087).
- Use wxUILocale in wxFloatProperty (Miguel Gimenez, Artur Wieczorek, #24140).
- Fix crash in wxImage::InitAlpha() if image is invalid (Randalphwa, #24260).
- Fix wxLogStatus() when wxNO_IMPLICIT_WXSTRING_ENCODING is defined (#24267).
- Don't let exceptions escape from event handlers called during idle processing.
- Fix reading some previously not loaded GIF images (Mark Wagner, #22799).
- Fix wxGrid selection after deleting rows/cols (Dietmar Schwertberger, 24286).
- Auto-grow in-place editor in generic wxListCtrl again (taler21, #24293).
- Center labels in generic wxListCtrl correctly again (taler21, #24292).
- Fix label display after editing it in generic wxListCtrl (taler21, #24311).
- Improve multiple selection UI in generic wxListCtrl (taler21, #24332).
- Fix item deselection in multi-selection generic wxListCtrl (taler21, #24312).
- Reduce flicker when closing wxAuiNotebook tab (Eran Ifrah, #24372).
- Don't include Ctrl+I/Ctrl+H in "TAB"/"cut" key categories (#24254).
- Make text in wxGenericMessageDialog more readable (Jeff Young, #24412).

wxGTK:

- Fix alpha in bitmaps created from SVG (Tim Eliseo, #24064).
- Improve desktop environment detection, notably under Wayland (#24050).
- Fix wxSystemSettings::GetMetric() scrollbar width calculation for GTK3 (#24057).