@@ -752,11 +752,19 @@ void wxWebResponseImpl::ReportDataReceived(size_t sizeReceived)
             break;
 
         case wxWebRequest::Storage_None:
+            m_request.IncRef();
+            const wxWebRequestImplPtr request(&m_request);
+
+            IncRef();
+            const wxWebResponseImplPtr response(this);
+
             wxWebRequestEvent* const evt = new wxWebRequestEvent
                                                (
                                                 wxEVT_WEBREQUEST_DATA,
                                                 m_request.GetId(),
-                                                wxWebRequest::State_Active
+                                                wxWebRequest::State_Active,
+                                                wxWebRequest(request),
+                                                wxWebResponse(response)
                                                );
             evt->SetDataBuffer(m_readBuffer);
 
